Finish static pages.

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,10 +1,4 @@
-
-<! DOCTYPE html>
-<html>
-  <head>
-    <title> Help | Ruby on Rails Turorial Sample App</title>
-   </head>
-<body>
+<% provide(:title, "Help") %>
   <h1>Help</h1>
    <p>
      Get help on the Ruby on Rails Tutorial at the
@@ -13,8 +7,6 @@
      <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
      book</a>.
     </p>
-</body>
-</html>
 
 
 
