--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,8 +1,4 @@
-<! DOCTYPE html>
-<html>
-<head>  
-	<title> About | Ruby on Rails Tutorial Sample App</title>
-</head>
+<% provide(:title, "About") %>
 <h1>About </h1>
   <p>
    The <a href="http://www.railstutorial.org/"><em>Ruby on Rails
@@ -13,7 +9,4 @@
    <a href="http://rubyonrails.org/">Ruby on Rails</a>.
    This is the sample application for the tutorial.
   </p>
-<body>
-</body>
 
-</html>
